added the first test for the login page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,13 +30,13 @@
       "target": "es5",
       "removeComments": false,
       "preserveConstEnums": true,
-      "outDir": "./dist",
+      "outDir": "./out",
       "sourceMap": false,
       "noEmitHelpers": false,
       "noEmitOnError": false,
       "noErrorTruncation": true,
       "keyofStringsOnly": true,
-      "baseUrl": "./"
+      "baseUrl": "./src"
     }
   }
   
