--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --host localhost --port 5454 --open --hot --config webpack/webpack.dev.js",
-    "build": "webpack --mode production --config webpack/webpack.prod.js"
+    "build": "webpack --mode production --config webpack/webpack.prod.js",
+    "test": "jest --watch"
   },
   "keywords": [
     "react",
@@ -15,26 +16,39 @@
   "author": "pidtchay",
   "license": "ISC",
   "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^25.2.3",
+    "@types/jsdom": "^16.2.3",
+    "@types/jsdom-global": "^3.0.2",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "fork-ts-checker-webpack-plugin": "^4.1.4",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^4.3.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.0.1",
     "jsdoc": "^3.6.4",
+    "jsdom": "^16.2.2",
+    "jsdom-global": "^3.0.2",
     "less-loader": "^6.1.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react-test-renderer": "^16.13.1",
     "speed-measure-webpack-plugin": "^1.3.3",
     "style-loader": "^1.2.1",
+    "ts-jest": "^26.0.0",
     "ts-loader": "^7.0.4",
     "typescript": "^3.9.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
