--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pidtchay-project",
-  "version": "0.0.2",
+  "version": "0.0.3",
+  "homepage": "https://p1dtchay.github.io/pidtchay-project",
   "description": "Personal project on the react framework",
   "main": "index.js",
   "scripts": {
@@ -24,6 +25,10 @@
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
@@ -36,6 +41,9 @@
     "@types/jsdom-global": "^3.0.2",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
