--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "pidtchay",
   "license": "ISC",
   "dependencies": {
+    "antd": "^4.2.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
