--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "tsc --noEmit && npm run test"
+      "pre-commit": "tsc --noEmit"
     }
   },
   "keywords": [
@@ -33,6 +33,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "tslint": "^6.1.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
@@ -71,6 +72,7 @@
     "style-loader": "^1.2.1",
     "ts-jest": "^26.0.0",
     "ts-loader": "^7.0.4",
+    "tslint-config-standard": "^9.0.0",
     "typescript": "^3.9.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack-bundle-analyzer": "^3.8.0"
