Update Node.js CI
add predeploy, deploy

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,3 +26,16 @@ jobs:
           npm run build
         env:
           CI: true
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: 10.x
+      - name: Predeploy, deploy
+        run: |
+          npm install
+          npm run predeploy
+          npm run deploy
