--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pidtchay-project",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "homepage": "https://p1dtchay.github.io/pidtchay-project",
   "description": "Personal project on the react framework",
   "main": "index.js",
@@ -29,6 +29,7 @@
   "license": "ISC",
   "dependencies": {
     "antd": "^4.2.5",
+    "history": "^4.10.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/history": "^4.7.6",
     "@types/jest": "^25.2.3",
     "@types/jsdom": "^16.2.3",
     "@types/jsdom-global": "^3.0.2",
