--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "build": "node node_modules/webpack/bin/webpack.js --config webpack/webpack.prod.js",
     "codestyle": "npm run prettier && npm run tslint",
     "deploy": "gh-pages -d out",
+    "precommit":"npm run codestyle && npm run preversion",
     "predeploy": "npm run build",
     "prettier": "npx prettier --write src/*",
+    "preversion:minor":"git-branch-is -r \"^feature/\" && npm version minor",
     "start": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --host localhost --port 5454 --open --hot --config webpack/webpack.dev.js",
     "test": "jest --colors",
     "test:updateShapshots": "jest --updateSnapshot --colors",
@@ -30,6 +32,7 @@
   "license": "ISC",
   "dependencies": {
     "antd": "^4.2.5",
+    "git-branch-is": "^3.1.0",
     "history": "^4.10.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
