--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pidtchay-project",
-  "version": "0.0.7",
+  "version": "0.1.0",
   "homepage": "https://p1dtchay.github.io/pidtchay-project",
   "description": "Personal project on the react framework",
   "main": "index.js",
@@ -8,10 +8,11 @@
     "build": "node node_modules/webpack/bin/webpack.js --config webpack/webpack.prod.js",
     "codestyle": "npm run prettier && npm run tslint",
     "deploy": "gh-pages -d out",
-    "precommit":"npm run codestyle && npm run preversion",
+    "precommit": "npm run codestyle && npm run preversion",
     "predeploy": "npm run build",
     "prettier": "npx prettier --write src/*",
-    "preversion:minor":"git-branch-is -r \"^feature/\" && npm version minor",
+    "preversion:minor": "git-branch-is -r \"^feature/\" && npm version minor",
+    "preversion:patch": "git-branch-is -r \"^(bugfix|hotfix)/\" && npm version patch",
     "start": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js --host localhost --port 5454 --open --hot --config webpack/webpack.dev.js",
     "test": "jest --colors",
     "test:updateShapshots": "jest --updateSnapshot --colors",
