--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,17 +15,18 @@ jobs:
         node-version: [8.x, 10.x, 12.x]
         
     steps:
-      - uses: actions/checkout@v1
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Install, build, test
-        run: |
-          npm install
-          npm run build
-          npm run test
-        env:
+    - uses: actions/checkout@v1
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: Install Packages
+      run: npm install
+    - name: Build page
+      run: npm run build
+    - name: Jest Tests
+      run: npm run jest
+      env:
           CI: true
   deploy:
     needs: build
