--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "node node_modules/webpack/bin/webpack.js --config webpack/webpack.prod.js",
     "codestyle": "npm run prettier && npm run lint:fix",
+    "jest": "jest --colors",
     "lint:fix": "node node_modules/eslint/bin/eslint src/**/*.{ts,tsx} --quiet --fix --color",
     "prettier": "node node_modules/prettier/bin-prettier.js  --write --config ./.prettierrc.js  src/**/*.{ts,tsx}",
     "preversion:minor": "git-branch-is -r \"^feature/\" && npm version minor",
