--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,13 +24,28 @@ jobs:
       run: npm install
     - name: Build page
       run: npm run build
-    - name: Jest Tests
-      run: npm run jest
       env:
           CI: true
-  
-  deploy:
+          
+  jestTests:
     needs: [build]
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [10.x, 12.x]
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: Install Packages
+      run: npm install
+    - name: Jest Tests
+      run: npm run test
+
+  deploy:
+    needs: [jestTests]
     runs-on: ubuntu-latest
     strategy:
       matrix:
