--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,15 +1,8 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://help.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
-
-version: 2
-updates:
-  - package-ecosystem: "javascript"
-    directory: "/" # Location of package manifests
-    schedule:
-      interval: "live"
-      
+version: 1
+update_configs:
+  - package_manager: "javascript"
+    directory: "/"
+    update_schedule: "live"
     default_labels:
       - "dependencies"
-      -  "changelog"
+      - "changelog"
