--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -10,11 +10,13 @@ jobs:
         matrix:
           node-version: [ 12.x ]
       steps:
+      - uses: actions/checkout@v2
       - name: Make out folder
         run: mkdir out
       - name: Clone master branch
         run: git clone "https://${{secrets.ACTIONS_DEPLOY_KEY}}@github.com/${GITHUB_ACTOR}/${GITHUB_ACTOR}.github.io.git" --branch master --single-branch ./out
-      - uses: actions/checkout@v2
+      - name: Check files in folder
+        run: ls -lah out/
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -25,13 +27,15 @@ jobs:
         run: npm run build
       - name: Set git config and add changes
         run: |
-          git config user.email "${{GITHUB_ACTOR}}@https://users.noreply.github.com"
-          git config user.name "${{GITHUB_ACTOR}}"
+          git config user.email "${GITHUB_ACTOR}@https://users.noreply.github.com"
+          git config user.name "${GITHUB_ACTOR}"
           git add --all
         working-directory: ./out
+      - name: Change work dir && Check file in working dir
+        run: cd out/ && ls -lah
       - name: Push
         run: |
-          COMMIT_MESSAGE="Update pages on $(data + '%Y-%m-%d %H:%M:%S')"
+          COMMIT_MESSAGE="Update pages on $(date)"
           git diff-index --quiet --cached HEAD -- && echo "No changes!" && exit 0 || echo $COMMIT_MESSAGE
           git commit -m "${COMMIT_MESSAGE}"
           git push https://{{secrets.ACTIONS_DEPLOY_KEY}}@github.com/${GITHUB_ACTOR}/${GITHUB_ACTOR}.github.io.git master
