--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -11,12 +11,8 @@ jobs:
           node-version: [ 12.x ]
       steps:
       - uses: actions/checkout@v2
-      - name: Make out folder
-        run: mkdir out
-      - name: Clone master branch
-        run: git clone "https://${{secrets.ACTIONS_DEPLOY_KEY}}@github.com/${GITHUB_ACTOR}/${GITHUB_ACTOR}.github.io.git" --branch master --single-branch ./out
-      - name: Check files in folder
-        run: ls -lah out/
+      - name: Check files in workfolder
+        run: ls -lah
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -25,18 +21,25 @@ jobs:
         run: npm install
       - name: Build page
         run: npm run build
+      - name: Exist folder
+        run: ls -lah
+      - name: Make deploy dir
+        run: mkdir deploy
+      - name: Clone master branch
+        run: git clone "https://${{secrets.ACTIONS_DEPLOY_KEY}}@github.com/${GITHUB_ACTOR}/${GITHUB_ACTOR}.github.io.git" --branch master --single-branch ./deploy
+      - name: Copy out to deploy
+        run: cp -r out/. deploy/
+      - name: Set work dir
+        run: cd deploy/
       - name: Set git config and add changes
         run: |
           git config user.email "${GITHUB_ACTOR}@https://users.noreply.github.com"
           git config user.name "${GITHUB_ACTOR}"
           git add --all
-        working-directory: ./out
-      - name: Change work dir && Check file in working dir
-        run: cd out/ && ls -lah
       - name: Push
         run: |
           COMMIT_MESSAGE="Update pages on $(date)"
           TEST=$(git status --porcelain|wc -l)
           if [[ 0 -eq $TEST ]]; then    echo "No changes"; exit 0; else echo $COMMIT_MESSAGE; fi
           git commit -m "${COMMIT_MESSAGE}"
-          git push https://{{secrets.ACTIONS_DEPLOY_KEY}}@github.com/${GITHUB_ACTOR}/${GITHUB_ACTOR}.github.io.git master
+          git push
