--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "build": "node node_modules/webpack/bin/webpack.js --config webpack/webpack.prod.js",
+    "build:analyzer": "node node_modules/webpack/bin/webpack.js --config webpack/webpack.bundle_analyzer.js",
     "codestyle": "npm run prettier && npm run lint:fix",
     "jest": "jest --colors",
     "lint:fix": "node node_modules/eslint/bin/eslint src/**/*.{ts,tsx} --quiet --fix --color",
@@ -41,6 +42,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "uuidv4": "^6.2.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
