--- a/package.json
+++ b/package.json
@@ -91,10 +91,10 @@
     "react-test-renderer": "^16.13.1",
     "speed-measure-webpack-plugin": "^1.3.3",
     "style-loader": "^1.2.1",
+    "terser-webpack-plugin": "^3.0.8",
     "ts-jest": "^26.1.1",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.6",
-    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack-bundle-analyzer": "^3.8.0"
   }
 }
