--- a/package.json
+++ b/package.json
@@ -6,17 +6,8 @@
   "main": "index.js",
   "scripts": {
     "build": "node node_modules/webpack/bin/webpack.js --config webpack/webpack.prod.js",
-    "build:analyzer": "node node_modules/webpack/bin/webpack.js --config webpack/webpack.bundle_analyzer.js",
-    "codestyle": "npm run prettier && npm run lint:fix",
-    "jest": "jest --colors",
-    "lint:fix": "node node_modules/eslint/bin/eslint src/**/*.{ts,tsx} --quiet --fix --color",
-    "prettier": "node node_modules/prettier/bin-prettier.js  --write --config ./.prettierrc.js  src/**/*.{ts,tsx}",
-    "preversion:minor": "git-branch-is -r \"^feature/\" && npm version minor",
-    "preversion:patch": "git-branch-is -r \"^(bugfix|hotfix)/\" && npm version patch",
-    "start": "node --max-old-space-size=2048 node_modules/webpack-dev-server/bin/webpack-dev-server.js --host localhost --port 5454 --open --hot --config webpack/webpack.dev.js",
-    "test": "jest --colors",
-    "test:updateShapshots": "jest --updateSnapshot --colors",
-    "tsc": "node --max-old-space-size=2048 node_modules/typescript/bin/tsc --noEmit"
+    "build:dev": "node node_modules/webpack/bin/webpack.js --config webpack/webpack.dev.js",
+    "start": "node --max-old-space-size=2048 node_modules/webpack-dev-server/bin/webpack-dev-server.js --host localhost --port 5454 --open --hot --config webpack/webpack.dev.js"
   },
   "husky": {
     "hooks": {
@@ -29,77 +20,18 @@
     "typescript"
   ],
   "author": "pidtchay",
-  "license": "ISC",
+  "license": "GPL v3",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.4.0",
-    "@types/redux-logger": "^3.0.8",
-    "antd": "^4.3.5",
-    "crypto-js": "^4.0.0",
-    "git-branch-is": "^3.1.0",
-    "history": "4.6.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-markdown": "^4.3.1",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "uuidv4": "^6.2.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
-    "@types/crypto-js": "^3.1.47",
-    "@types/enzyme": "^3.10.5",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/history": "^4.7.6",
-    "@types/jest": "^26.0.10",
-    "@types/jsdom": "^16.2.3",
-    "@types/jsdom-global": "^3.0.2",
-    "@types/node": "^14.6.2",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/react-test-renderer": "^16.9.3",
-    "@types/redux": "^3.6.0",
-    "@types/redux-thunk": "^2.1.0",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
-    "clean-webpack-plugin": "^3.0.0",
-    "cross-env": "^7.0.2",
-    "css-loader": "^3.6.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^7.4.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-config-react": "^1.1.7",
-    "eslint-plugin-import-helpers": "^1.0.2",
-    "eslint-plugin-jsdoc": "^30.3.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.3",
-    "fork-ts-checker-webpack-plugin": "^4.1.4",
-    "happypack": "^5.0.1",
-    "html-webpack-plugin": "^4.4.1",
-    "husky": "^4.2.5",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.1.0",
-    "jsdoc": "^3.6.4",
-    "jsdom": "^16.4.0",
-    "jsdom-global": "^3.0.2",
-    "less-loader": "^6.2.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "prettier": "^2.0.5",
-    "react-test-renderer": "^16.13.1",
-    "speed-measure-webpack-plugin": "^1.3.3",
-    "style-loader": "^1.2.1",
-    "terser-webpack-plugin": "^3.0.8",
-    "ts-jest": "^26.1.1",
     "ts-loader": "^8.0.3",
-    "typescript": "^3.9.6",
-    "webpack-bundle-analyzer": "^3.8.0"
+    "typescript": "^3.9.6"
   }
 }
