--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "build": "webpack --config webpack/webpack.prod.js",
     "build:dev": "webpack --config webpack/webpack.dev.js",
     "format": "prettier --write src/**/*.{ts,tsx}",
-    "lint": "tsc --noEmit && eslint src/**/*.{ts,tsx}",
-    "start": "webpack --mode development --watch --config webpack/webpack.dev.js",
+    "lint": "eslint src/**/*.{ts,tsx}",
+    "start": "webpack serve --config webpack/webpack.dev.js",
+    "watch": "webpack --watch --config webpack/webpack.dev.js",
     "json-server": "json-server --watch api/db.json"
   },
   "keywords": [
@@ -22,25 +23,34 @@
   "dependencies": {
     "node": "^15.10.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
     "@types/node": "^14.14.35",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
-    "@typescript-eslint/eslint-plugin": "4.4.1",
+    "@types/webpack": "^4.41.26",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "eslint": "^7.22.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "7.20.3",
-    "eslint-plugin-react-hooks": "4.0.8",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint-webpack-plugin": "^2.5.2",
+    "fork-ts-checker-webpack-plugin": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "json-server": "^0.16.3",
     "prettier": "^2.2.1",
     "ts-loader": "^8.0.3",
     "typescript": "^3.9.6",
     "webpack": "^5.27.0",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
