--- a/package.json
+++ b/package.json
@@ -24,19 +24,23 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
     "faker": "^5.4.0",
+    "i18next": "^20.2.1",
     "moment": "^2.29.1",
     "node": "^15.10.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.8.13",
     "react-router-dom": "^5.2.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/faker": "^5.1.7",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
+    "@types/i18next": "^13.0.0",
     "@types/node": "^14.14.35",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/react-i18next": "^8.1.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/terser-webpack-plugin": "^5.0.3",
     "@types/webpack": "^4.41.26",
