--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "build:dev": "npm run tsc && webpack --config webpack/webpack.dev.js",
     "format": "prettier --write src/**/*.{ts,tsx}",
     "lint": "eslint src/**/*.{ts,tsx} --fix",
+    "lint:check":"eslint src/**/*.{ts,tsx}",
     "start": "npm run tsc && webpack serve --config webpack/webpack.dev.js",
     "watch": "webpack  --watch —progress --max_old_space_size=4096 --config webpack/webpack.dev.js",
-    "json-server": "json-server --watch api/db.json",
+    "json-server": "json-server --middlewares server.js --routes routes.json --watch src/api/db.json --port 3000",
     "tsc": "node --max-old-space-size=4096 node_modules/typescript/bin/tsc -noEmit"
   },
   "keywords": [
@@ -23,6 +24,7 @@
   "license": "GPL v3",
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
+    "axios": "^0.21.1",
     "faker": "^5.4.0",
     "i18next": "^20.2.1",
     "moment": "^2.29.1",
@@ -34,6 +36,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/faker": "^5.1.7",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
     "@types/i18next": "^13.0.0",
