--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:dev": "npm run tsc && webpack --config webpack/webpack.dev.js",
     "format": "prettier --write src/**/*.{ts,tsx}",
     "lint": "eslint src/**/*.{ts,tsx} --fix",
-    "lint:check":"eslint src/**/*.{ts,tsx}",
+    "lint:check": "eslint src/**/*.{ts,tsx}",
     "start": "npm run tsc && webpack serve --config webpack/webpack.dev.js",
     "watch": "webpack  --watch —progress --max_old_space_size=4096 --config webpack/webpack.dev.js",
     "json-server": "json-server --middlewares server.js --routes routes.json --watch src/api/db.json --port 3000",
@@ -24,6 +24,7 @@
   "license": "GPL v3",
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
+    "@types/uuid": "^8.3.0",
     "axios": "^0.21.1",
     "faker": "^5.4.0",
     "i18next": "^20.2.1",
@@ -32,6 +33,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.8.13",
+    "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.2.0",
     "uuid": "^8.3.2"
   },
@@ -44,6 +46,7 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-i18next": "^8.1.0",
+    "@types/react-loader-spinner": "^3.1.3",
     "@types/react-router-dom": "^5.1.7",
     "@types/terser-webpack-plugin": "^5.0.3",
     "@types/webpack": "^4.41.26",
@@ -64,8 +67,8 @@
     "json-server": "^0.16.3",
     "prettier": "^2.2.1",
     "terser-webpack-plugin": "^5.1.1",
-    "ts-loader": "^8.0.3",
-    "typescript": "^3.9.6",
+    "ts-loader": "^8.2.0",
+    "typescript": "^3.9.9",
     "webpack": "^5.27.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
