--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/uuid": "^8.3.0",
     "axios": "^0.21.1",
     "faker": "^5.4.0",
+    "html-react-parser": "^1.2.6",
     "i18next": "^20.2.1",
     "moment": "^2.29.1",
     "node": "^15.10.0",
@@ -35,6 +36,7 @@
     "react-i18next": "^11.8.13",
     "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.2.0",
+    "recoil": "^0.2.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
