--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
   "license": "GPL v3",
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
-    "@types/uuid": "^8.3.0",
     "axios": "^0.21.1",
+    "classnames": "^2.3.1",
+    "crypto-js": "^4.0.0",
     "faker": "^5.4.0",
     "html-react-parser": "^1.2.6",
     "i18next": "^20.2.1",
@@ -41,9 +42,12 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/classnames": "^2.3.1",
+    "@types/crypto-js": "^4.0.1",
     "@types/faker": "^5.1.7",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
     "@types/i18next": "^13.0.0",
+    "@types/mini-css-extract-plugin": "^1.4.3",
     "@types/node": "^14.14.35",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
@@ -51,9 +55,11 @@
     "@types/react-loader-spinner": "^3.1.3",
     "@types/react-router-dom": "^5.1.7",
     "@types/terser-webpack-plugin": "^5.0.3",
+    "@types/uuid": "^8.3.0",
     "@types/webpack": "^4.41.26",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.2.5",
     "eslint": "^7.22.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.1.0",
@@ -65,11 +71,17 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "eslint-webpack-plugin": "^2.5.2",
     "fork-ts-checker-webpack-plugin": "^6.2.0",
+    "happypack": "^5.0.1",
     "html-webpack-plugin": "^5.3.1",
+    "jsdoc": "^3.6.7",
     "json-server": "^0.16.3",
+    "less": "^4.1.1",
+    "less-loader": "^9.0.0",
+    "mini-css-extract-plugin": "^1.6.0",
     "prettier": "^2.2.1",
+    "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
-    "ts-loader": "^8.2.0",
+    "ts-loader": "^9.2.1",
     "typescript": "^3.9.9",
     "webpack": "^5.27.0",
     "webpack-cli": "^4.5.0",
